Finished most of the Academic Dashboard

--- a/pages/academic-dashboard.html
+++ b/pages/academic-dashboard.html
@@ -20,7 +20,7 @@
       <!-- The empty h4 is for the current date through javascript.-->
       <ul class="date-Log-Out">
         <li class="header-Date-Text"><p id="body-Header"></p></li>
-        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
+        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</a></li>
         </ul>
         <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
         <div class="page-Breaks top-Break"></div>
@@ -71,92 +71,105 @@
         </div>
       </section>
 
-      <section class=""> <!-- Possible use of the scrolling content class here -->
-        <h4 class="">Academic Standing at a Glance</h4>
+      <section class="scrolling-Content"> <!-- Possible use of the scrolling content class here -->
 
-        <div class="">
-          <h5 class="">CSET 105</h5>
-          <h4 class="">Intro to Web Applications</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <h4 class="content-Title-Text">Academic Standing at a Glance</h4>
+
+        <div class="grade-Circle-Background dashboard-105">
+          <h5 class="hero-Title-Text">CSET 105</h5>
+          <h4 class="content-Subtitle-Text">Intro to Web Applications</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
 
-        <div class="">
-          <h5 class="">CSET 110</h5>
-          <h4 class="">Web Development I</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <div class="grade-Circle-Background dashboard-110">
+          <h5 class="hero-Title-Text">CSET 110</h5>
+          <h4 class="content-Subtitle-Text">Web Development I</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
 
-        <div class="">
-          <h5 class="">CSET 115</h5>
-          <h4 class="">Technical Requirements  &amp; Data Structures</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <div class="grade-Circle-Background dashboard-115">
+          <h5 class="hero-Title-Text">CSET 115</h5>
+          <h4 class="content-Subtitle-Text">Technical Requirements  &amp; Data Structures</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
 
-        <div class="">
-          <h5 class="">CSET 120</h5>
-          <h4 class="">Software Project I</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <div class="grade-Circle-Background dashboard-120">
+          <h5 class="hero-Title-Text">CSET 120</h5>
+          <h4 class="content-Subtitle-Text">Software Project I</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
 
-        <div class="">
-          <h5 class="">GENED 101</h5>
-          <h4 class="">General Education Credit</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <div class="grade-Circle-Background dashboard-137K">
+          <h5 class="hero-Title-Text">Math 137K</h5>
+          <h4 class="content-Subtitle-Text">Intermediate Algebra</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
 
-        <div class="">
-          <h5 class="">CSET 110</h5>
-          <h4 class="">General Education Class</h4>
-          <div class="">
-            <!-- Pecentage Circle goes around here -->
-            <h4 class="">Current Grade</h4>
-            <h1 class="">%</h1>
+        <div class="grade-Circle-Background dashboard-106J">
+          <h5 class="hero-Title-Text">ENG 106J</h5>
+          <h4 class="content-Subtitle-Text">English Composition 1</h4>
+          <div class="academic-Circle-Grey">
+            <div class="academic-Circle-Color">
+              <!-- Pecentage Circle goes around here -->
+              <h4 class="dashboard-Grade-Text">Current Grade</h4>
+              <h1 class="academic-Grade-Percentage-Text">%</h1>
+          </div>
           </div>
         </div>
+
+      <section class="dashboard-Right-Content">
+        <h4 class="content-Title-Text">Semester Schedule</h4>
+
+        <ul class="">
+          <li class=""><p class="hero-Title-Text">CSET 105, M, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">Intro to Web Applications</p></li>
+          <li class=""><p class="hero-Title-Text">CSET 110, T 12:00pm - 4:30pm, W 12:30pm - 4:30pm</p> <p class="content-Subtitle-Text">Web Development I</p></li>
+          <li class=""><p class="hero-Title-Text">CSET 115, R, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">Technical Requirements &amp; Data Structures</p></li>
+          <li class=""><p class="hero-Title-Text">CSET 120, F, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">Software Project I</p></li>
+          <li class=""><p class="hero-Title-Text">MATH 137, K, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">Intermediate Algebra</p></li>
+          <li class=""><p class="hero-Title-Text">ENG 106, J, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">English Composition 1</p></li>
+        </ul>
+
+        <a class="hero-Title-Text calendar" href="currentschedule.html">View Calendar View »</a>
+
+        <h4 class="content-Title-Text">Upcoming Due Dates</h4>
+
+        <ul class="">
+          <li class=""><p class="content-Title-Text">11/15</p> <p class="content-Subtitle-Text">Web Development I: JavaScript Fundamentals Test</p></li>
+          <li class=""><p class="content-Title-Text">12/15</p> <p class="content-Subtitle-Text">Software Project I: Final Project due by 11:55pm EST</p></li>
+        </ul>
+
+        <a class="hero-Title-Text" href="homepage.html">See More »</a>
       </section>
-
-      <section class="">
-        <h4 class="">Semester Schedule</h4>
-
-        <ul class="">
-          <li class=""><p class="">CSET 105, M, 12:00pm - 4:30pm</p> <p class="">Intro to Web Applications</p></li>
-          <li class=""><p class="">CSET 110, T 12:00pm - 4:30pm, W 12:30pm - 4:30pm</p> <p class="">Web Development I</p></li>
-          <li class=""><p class="">CSET 115, R, 12:00pm - 4:30pm</p> <p class="">Technical Requirements &amp; Data Structures</p></li>
-          <li class=""><p class="">CSET 120, F, 12:00pm - 4:30pm</p> <p class="">Software Project I</p></li>
-          <li class=""><p class="">GENED 101, R, 12:00pm - 4:30pm</p> <p class="">General Education Requirement #1</p></li>
-          <li class=""><p class="">GENED 102, F, 12:00pm - 4:30pm</p> <p class="">GenEd Req</p></li>
-        </ul>
-
-        <a class="" href="">View Calendar View »</a>
-
-        <h4 class="">Upcoming Due Dates</h4>
-
-        <ul class="">
-          <li class=""><p class="">11/15</p> <p class="">Web Development I: JavaScript Fundamentals Test</p></li>
-          <li class=""><p class="">12/15</p> <p class="">Software Project I: Final Project due by 11:55pm EST</p></li>
-        </ul>
-
-        <a class="" href="">See More »</a>
       </section>
 
       <!-- This is the logout modal, treat this appropriatly. -->
