finished majority upcoming courses

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -79,46 +79,38 @@
       <section class="no-Classes-Registered">
         <div class="all-Caps-Rage">
           <h4 class="content-Title-Text">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
-          <h1 class="content-Subtitle-Text">Register For Spring Courses.</h1>
+          <h1 class="content-Subtitle-Text spring-Registration">Register For Spring Courses.</h1>
         </div>
-        <div class="start-Button">
-          <button>START</button>
-        </div>
+        <div class="start-Button">START</div>
       </section>
 
       <section class="upc-Schedule-Geneds">
-        <h4 class="upc-C-Seven">Course Registration Completion:</h4>
-        <div class="upc-C-Seven">60%</div>
+        <h4 class="upc-C-Seven registration-Completion">Course Registration Completion:</h4>
+        <div class="upc-C-Seven percent-Sixty">60%</div>
         <div class="completion-Bar"></div>
 
-        <h4 class="upc-Bl-14">General Education</h4>
+        <h4 class="upc-Bl-14 gen-Eds">General Education</h4>
         <div class="general-Option">
           <div class="gen-Eds-Selection">
             <ol>
-              <li class="upc-Course-List">Computer Information Systems</li>
-              <li class="upc-Course-List">English</li>
-              <li class="upc-Course-List">History</li>
-              <li class="upc-Course-List">Mathematics</li>
-              <li class="upc-Course-List">Physical Education and Health</li>
-              <li class="upc-Course-List">Science</li>
-              <li class="upc-Course-List">Social Sciences</li>
+              <li class="upc-Course-List">Computer Information Systems ></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">English ></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">History ></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">Mathematics ></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">Physical Education and Healt h></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">Science ></li>
+              <div class="line-Space"></div>
+              <li class="upc-Course-List">Social Sciences ></li>
             </ol>
-          </div>
-          <div class="arrows-On-The-Rye">
-            <ol>
-              <li class="upc-Course-List">></li>
-              <li class="upc-Course-List">></li>
-              <li class="upc-Course-List"></li>
-              <li class="upc-Course-List">></li>
-              <li class="upc-Course-List">></li>
-              <li class="upc-Course-List">></li>
-              <li class="upc-Course-List">></li>
-            </ol>
-            <!-- Comeback later to make the top two arrows selectable links. -->
           </div>
         </section>
 
-        <section class="">
+        <section class="core-Course">
           <h4 class="upc-C-Seven">Course Registration Completion:</h4>
           <div class="upc-C-Seven">50%</div>
           <div class="completion-Bar"></div>
@@ -150,8 +142,8 @@
         </section>
 
         <section class="computer-Information-Systems">
-          <h4 class="upc-C-Seven">Course Registration Completion:</h4>
-          <div class="upc-C-Seven">60%</div>
+          <h4 class="upc-C-Seven registration-Completion">Course Registration Completion:</h4>
+          <div class="upc-C-Seven percent-Sixty">60%</div>
           <div class="completion-Bar"></div>
           <h4 class="upc-Bl-14">General Education</h4>
           <!-- Use of Possible input tag here. Come back for later review -->
