--- a/pages/academic-dashboard.html
+++ b/pages/academic-dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" type="text/css" href="../style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
@@ -16,7 +16,7 @@
 
       <!-- DAVID, COLLIN, ANTHONEY, write a new class name for the second font. It's a 10 point header text using #48a2ba coloring. -->
 
-      <h4 class="header-Title-Text">HOME > ACADEMIC SERVICES ></h4><h4 class="header-Title-Text-Two"> ACADEMIC DASHBOARD</h4>
+      <h4 class="header-Title-Text">HOME > ACADEMIC SERVICES ></h4><h6 class="header-Title-Text-Two"> ACADEMIC DASHBOARD</h6>
       <!-- The empty h4 is for the current date through javascript.-->
       <ul class="date-Log-Out">
         <li class="header-Date-Text"><p id="body-Header"></p></li>
@@ -73,7 +73,7 @@
 
       <section class="scrolling-Content"> <!-- Possible use of the scrolling content class here -->
 
-        <h4 class="content-Title-Text">Academic Standing at a Glance</h4>
+        <h4 class="content-Title-Text">ACADEMIC STANDING AT A GLANCE</h4>
 
         <div class="grade-Circle-Background dashboard-105">
           <h5 class="hero-Title-Text">CSET 105</h5>
@@ -82,7 +82,7 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">92%</h1>
           </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">81%</h1>
           </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">89%</h1>
           </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">79%</h1>
           </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">99%</h1>
           </div>
           </div>
         </div>
@@ -142,13 +142,13 @@
             <div class="academic-Circle-Color">
               <!-- Pecentage Circle goes around here -->
               <h4 class="dashboard-Grade-Text">Current Grade</h4>
-              <h1 class="academic-Grade-Percentage-Text">%</h1>
+              <h1 class="academic-Grade-Percentage-Text">68%</h1>
           </div>
           </div>
         </div>
 
       <section class="dashboard-Right-Content">
-        <h4 class="content-Title-Text">Semester Schedule</h4>
+        <h4 class="content-Title-Text">SEMESTER SCHEDULE</h4>
 
         <ul class="">
           <li class=""><p class="hero-Title-Text">CSET 105, M, 12:00pm - 4:30pm</p> <p class="content-Subtitle-Text">Intro to Web Applications</p></li>
