quick schedule changes

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -13,12 +13,12 @@
 
     <header class="body-Header">
 
-      <h4 class="header-Title-Text">Home</h4>
+      <h4 class="header-Title-Text">HOME > ACADEMIC SERVICES ></h4><h6 class="header-Title-Text-Two"> CURRENT SCHEDULE</h6>
       <!-- The empty h4 is for the current date through javascript.-->
       <ul class="date-Log-Out">
         <li class="header-Date-Text"><p id="body-Header"></p></li>
-        <li class="header-Log-Out-Text">Log Out?</li>
-      </ul>
+        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</a></li>
+        </ul>
       <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
       <div class="page-Breaks top-Break"></div>
     </header>
@@ -173,6 +173,6 @@
     </div>
   </section>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="../script.js" type="text/javascript"></script>
   </body>
   </html>
