finished styling grades&reporting

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -79,7 +79,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">92%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -100,7 +100,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">79%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -121,7 +121,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">89%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -142,7 +142,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">81%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -163,7 +163,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">99%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -184,7 +184,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grades-Complete-Text">40%</h1>
+                <h1 class="grades-Complete-Text">68%</h1>
                 <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
@@ -204,7 +204,7 @@
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">92%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -214,15 +214,15 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">96%</h6>
+          <h6 class="grades-Subtitle-Text">96%</h6>
+          <h6 class="grades-Subtitle-Text">84%</h6>
         </div>
 
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">79%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -232,15 +232,15 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">89%</h6>
+          <h6 class="grades-Subtitle-Text">72%</h6>
+          <h6 class="grades-Subtitle-Text">76%</h6>
         </div>
 
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">89%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -250,15 +250,15 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">89%</h6>
+          <h6 class="grades-Subtitle-Text">80%</h6>
+          <h6 class="grades-Subtitle-Text">98%</h6>
         </div>
 
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">81%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -268,15 +268,15 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">80%</h6>
+          <h6 class="grades-Subtitle-Text">81%</h6>
+          <h6 class="grades-Subtitle-Text">82%</h6>
         </div>
 
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">99%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -286,15 +286,15 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">99%</h6>
+          <h6 class="grades-Subtitle-Text">99%</h6>
+          <h6 class="grades-Subtitle-Text">99%</h6>
         </div>
 
         <div class="grades-Percent-Background">
           <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
-          <h1 class="grades-Percent">%</h1>
+          <h1 class="grades-Percent">68%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
@@ -304,9 +304,9 @@
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
         </div>
         <div class="right-Content-Subtitle-Boxes">
-          <h6 class="grades-Subtitle-Text">90%</h6>
-          <h6 class="grades-Subtitle-Text">85%</h6>
-          <h6 class="grades-Subtitle-Text">100%</h6>
+          <h6 class="grades-Subtitle-Text">70%</h6>
+          <h6 class="grades-Subtitle-Text">78%</h6>
+          <h6 class="grades-Subtitle-Text">56%</h6>
         </div>
       </div>
     </section>
