wrote script to hide the calender.

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -91,11 +91,11 @@
     </div>
 
     <div class="view-As">
-      <p class="view-As-List">View as: List <span class="view-Space"> | </span> Calender</div></p>
+      <p class="view-As-List">View as: List <span class="view-Space"> | </span><button onclick="reveal()">Calender</button>
     </div>
 
     <section class="current-Schedule-Calender">
-      <div class="monday">
+      <div id="cloak" class="monday">
         <h1 class="schedule-Day-Text">Monday</h1>
 
         <div class="eng-101">
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="tuesday">
+      <div id="cloak" class="tuesday">
         <h1 class="schedule-Day-Text">Tuesday</h1>
 
         <div class="math-100">
@@ -123,7 +123,7 @@
         </div>
       </div>
 
-      <div class="wednesday">
+      <div id="cloak" class="wednesday">
         <h1 class="schedule-Day-Text">Wednesday</h1>
 
         <div class="eng-101">
@@ -137,7 +137,7 @@
         </div>
       </div>
 
-      <div class="thursday">
+      <div id="cloak" class="thursday">
         <h1 class="schedule-Day-Text">Thursday</h1>
 
         <div class="math-100">
@@ -151,7 +151,7 @@
         </div>
       </div>
 
-      <div class="friday">
+      <div id="cloak" class="friday">
         <h1 class="schedule-Day-Text">Friday</h1>
         <div class="free-Time-Friday"><p class="break-Time">Break</p></div>
         <div class="cset-120">
