--- a/pages/core-Selection.html
+++ b/pages/core-Selection.html
@@ -95,7 +95,7 @@
   </div>
 
   <div class="get-Help-Button">
-    <p class="get-Help-Teal">Get Help »</p>
+    <a href="pop-Up-Help.html" class="get-Help-Teal">Get Help</a>
   </div>
 </section>
 
