--- a/pages/pop-Up-Help2c.html
+++ b/pages/pop-Up-Help2c.html
@@ -68,44 +68,22 @@
     </div>
     </section>
 
-    <div class="upcoming-Courses">
-      <h1 class="content-Title-Text">Upcoming Courses:</h1>
-    </div>
-    <div class="semester">
-      <p class="semester-Text">Semester:</p>
-      <p class="spring-Text">Spring 2018</p>
-    </div>
-
-    <div class="white-Box">
-      <section class="no-Classes-Registered">
-        <div class="all-Caps-Rage">
-          <h4 class="content-Title-Text">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
-          <h1 class="content-Subtitle-Text spring-Registration">Register For Spring Courses.</h1>
+    <section class="pop-Up-2a">
+      <div class="popup-Outline">
+        <h4 class="upc-C-Seven">Course Registration Help</h4>
+        <h4 class="content-Title-Text">Current Program:</h4>
+        <h4 class="upc-Bl-14">Computer Software Engineering Technology</h4>
+        <h5 class="content-Title-Text">New Program</h5>
+          <select class="dropdown-Menu-Class-Selection">
+            <option value="0"></option>
+          </select>
         </div>
-        <a href="core-Selection.html" class="start-Button">START</a>
-      </section>
+        <div class="submit-Button">
+          <a href="pop-Up-Help2cc.html" class="white-Twelve">SUBMIT</a>
+        </div>
+      </div>
+    </section>
 
-      <section class="pop-Up-2b">
-        <div class="popup-Outline">
-          <h4 class="upc-C-Seven">Course Registration Help</h4>
-          <h4 class="upc-Bl-14">Error: Major Courses Unavailable.</h4>
-          <p class="upc-Bl-13">Your response has been recorded. Support will</p>
-          <p class="upc-Bl-13">be in touch via email.</p>
-          <div class="okay-Button">
-            <p class="white-Twelve">OKAY</p>
-          </div>
-        </section>
-
-          <!-- This is the logout modal, treat this appropriatly. -->
-          <section class="" id="">
-            <h3 class="">Log out</h3>
-            <p class="">Are you sure you’d like to log out?</p>
-
-            <div class="">
-              <h3 class="">LOG OUT</h3>
-              <h3 class="">NEVERMIND</h3>
-            </div>
-
-            <script src="script.js" type="text/javascript"></script>
-          </body>
-          </html>
+    <script src="script.js" type="text/javascript"></script>
+  </body>
+  </html>
