--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 
       <div class="login-Information-Email">
         <form class="email-Entry">
-          <input type="text" name="email">Email</input>
+          <input class="login-Info" type="text" name="email">Email</input>
         </form>
       </div>
 
       <div class="login-Information-Password">
         <form class="password-Entry">
-          <input type="text" name="password">Password</input>
+          <input class="login-Info" type="text" name="password">Password</input>
         </form>
       </div>
 
       <div class="submit-Button">
-        <p class="white-Twelve">SUBMIT</p>
+        <p class="white-Twelve">Submit</p>
       </div>
 
-      <h5 class="forgot-Password">Forgot Password</h5>
+      <h5 class="forgot-Password">Forgot Password?</h5>
     </section>
     <script src="script.js" type="text/javascript"></script>
   </body>
